--- a/Resources/administration/src/module/sw-settings-custom-field/component/sw-custom-field-set-detail-base/sw-custom-field-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-settings-custom-field/component/sw-custom-field-set-detail-base/sw-custom-field-detail-base.html.twig
@@ -6,7 +6,7 @@
             <sw-field
                     type="text"
                     :label="$tc(`sw-settings-custom-field.set.detail.labelTechnicalName`)"
-                    :tooltipText="$tc('sw-settings-custom-field.general.tooltipTechnicalName')"
+                    :helpText="$tc('sw-settings-custom-field.general.tooltipTechnicalName')"
                     :disabled="!set.isLocal"
                     v-model="set.name">
             </sw-field>
