--- a/Resources/administration/src/module/sw-settings-salutation/page/sw-settings-salutation-detail/sw-settings-salutation-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-salutation/page/sw-settings-salutation-detail/sw-settings-salutation-detail.html.twig
@@ -60,7 +60,7 @@
                                           class="sw-settings-salutation-detail__salutation_key"
                                           :label="$tc('sw-settings-salutation.detail.fieldSalutationKeyLabel')"
                                           :placeholder="$tc('sw-settings-salutation.detail.fieldSalutationKeyPlaceholder')"
-                                          :tooltipText="$tc('sw-settings-salutation.detail.fieldSalutationKeyTooltip')"
+                                          :helpText="$tc('sw-settings-salutation.detail.fieldSalutationKeyTooltip')"
                                           :errorMessage="invalidKeyErrorMessage"
                                           validation="required"
                                           @input="onChange">
