--- a/Resources/administration/src/module/sw-settings-shipping/component/sw-price-rule-modal/sw-price-rule-modal.html.twig
+++ b/Resources/administration/src/module/sw-settings-shipping/component/sw-price-rule-modal/sw-price-rule-modal.html.twig
@@ -5,7 +5,7 @@
                   :placeholder="$tc('sw-settings-shipping.priceRuleModal.placeholderPrice')"
                   validation="required"
                   v-model="currentPriceRule.price">
-            <template slot="suffix" slot-scope="{}">
+            <template #suffix>
                 {{ currencySuffix }}
             </template>
         </sw-field>
