--- a/Resources/administration/src/module/sw-settings-tax/page/sw-settings-tax-list/sw-settings-tax-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-tax/page/sw-settings-tax-list/sw-settings-tax-list.html.twig
@@ -88,9 +88,11 @@
 
                                                     {% block sw_settings_tax_list_columns_taxrate_editor %}
                                                         <sw-field type="number"
-                                                                  suffix="%"
                                                                   v-model="item.taxRate"
                                                                   slot="inline-edit">
+                                                            <template #suffix>
+                                                                %
+                                                            </template>
                                                         </sw-field>
                                                     {% endblock %}
                                                 </sw-grid-column>
