--- a/Resources/administration/src/app/component/media/sw-media-modal-folder-settings/sw-media-modal-folder-settings.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-modal-folder-settings/sw-media-modal-folder-settings.html.twig
@@ -66,7 +66,8 @@
                             {% block sw_media_modal_folder_settings_tab_content_thumbnails_left_container %}
                                 <div class="sw-media-modal-folder-settings__thumbnails-left-container">
                                     {% block sw_media_modal_folder_settings_inherit_settings_field %}
-                                        <sw-field type="boolean"
+                                        <sw-field type="switch"
+                                            bordered
                                             :label="$tc('global.sw-media-modal-folder-settings.labelInheritSettings')"
                                             v-model="folder.useParentConfiguration"
                                             :disabled="folder.parentId === null"
@@ -75,16 +76,18 @@
                                     {% endblock %}
 
                                     {% block sw_media_modal_folder_settings_generate_thumbnails_field %}
-                                        <sw-field type="boolean"
-                                            :label="$tc('global.sw-media-modal-folder-settings.labelGenerateThumbnails')"
-                                            v-model="configuration.createThumbnails"
-                                            :disabled="folder.useParentConfiguration">
+                                        <sw-field type="switch"
+                                                  bordered
+                                                  :label="$tc('global.sw-media-modal-folder-settings.labelGenerateThumbnails')"
+                                                  v-model="configuration.createThumbnails"
+                                                  :disabled="folder.useParentConfiguration">
                                         </sw-field>
                                     {% endblock %}
 
                                     {% block sw_media_modal_folder_settings_keep_proportions_field %}
                                         <sw-field
-                                            type="boolean"
+                                            type="switch"
+                                            bordered
                                             :label="$tc('global.sw-media-modal-folder-settings.labelKeepProportions')"
                                             v-model="configuration.keepAspectRatio"
                                             :disabled="notEditable">
@@ -97,7 +100,6 @@
                                             numberType="int"
                                             :label="$tc('global.sw-media-modal-folder-settings.labelThumbnailQuality')"
                                             v-model="configuration.thumbnailQuality"
-                                            :validation="configuration.thumbnailQuality >= 0 &&  configuration.thumbnailQuality <= 100"
                                             :min="0"
                                             :max="100"
                                             :step="1"
