--- a/Resources/administration/src/module/sw-cms/component/sw-cms-block-config/sw-cms-block-config.html.twig
+++ b/Resources/administration/src/module/sw-cms/component/sw-cms-block-config/sw-cms-block-config.html.twig
@@ -2,7 +2,7 @@
     <div class="sw-cms-block-config">
         {% block sw_cms_block_config_name_field %}
             <sw-text-field :label="$tc('sw-cms.detail.labelBlockNameField')"
-                           :tooltipText="$tc('sw-cms.detail.tooltipBlockNameField')"
+                           :helpText="$tc('sw-cms.detail.tooltipBlockNameField')"
                            v-model="block.name">
             </sw-text-field>
         {% endblock %}
