--- a/Resources/administration/src/module/sw-product/component/sw-product-settings-form/sw-product-settings-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-settings-form/sw-product-settings-form.html.twig
@@ -29,9 +29,11 @@
                         <sw-field type="number"
                                   :label="$tc('sw-product.settingsForm.labelWidth')"
                                   :placeholder="$tc('sw-product.settingsForm.placeholderWidth')"
-                                  suffix="mm"
                                   :min="0"
                                   v-model="product.width">
+                            <template #suffix>
+                                <span>mm</span>
+                            </template>
                         </sw-field>
                     {% endblock %}
 
@@ -39,9 +41,11 @@
                         <sw-field type="number"
                                   :label="$tc('sw-product.settingsForm.labelHeight')"
                                   :placeholder="$tc('sw-product.settingsForm.placeholderHeight')"
-                                  suffix="mm"
                                   :min="0"
                                   v-model="product.height">
+                            <template #suffix>
+                                <span>mm</span>
+                            </template>
                         </sw-field>
                     {% endblock %}
                 </sw-container>
@@ -51,9 +55,11 @@
                         <sw-field type="number"
                                   :label="$tc('sw-product.settingsForm.labelLength')"
                                   :placeholder="$tc('sw-product.settingsForm.placeholderLength')"
-                                  suffix="mm"
                                   :min="0"
                                   v-model="product.length">
+                            <template #suffix>
+                                <span>mm</span>
+                            </template>
                         </sw-field>
                     {% endblock %}
 
@@ -61,9 +67,11 @@
                         <sw-field type="number"
                                   :label="$tc('sw-product.settingsForm.labelWeight')"
                                   :placeholder="$tc('sw-product.settingsForm.placeholderWeight')"
-                                  suffix="kg"
                                   :min="0"
                                   v-model="product.weight">
+                            <template #suffix>
+                                <span>kg</span>
+                            </template>
                         </sw-field>
                     {% endblock %}
                 </sw-container>
@@ -112,16 +120,16 @@
 
             <sw-container columns="repeat(auto-fit, minmax(200px, 1fr)" gap="0px 30px" align="center">
                 {% block sw_product_settings_form_shipping_free_field %}
-                    <sw-field type="boolean"
-                              :min="0"
+                    <sw-field type="switch"
+                              bordered
                               :label="$tc('sw-product.settingsForm.labelShippingFree')"
                               v-model="product.shippingFree">
                     </sw-field>
                 {% endblock %}
 
                 {% block sw_product_settings_form_mark_as_topseller_field %}
-                    <sw-field type="boolean"
-                              :min="0"
+                    <sw-field type="switch"
+                              bordered
                               :label="$tc('sw-product.settingsForm.labelMarkAsTopseller')"
                               v-model="product.markAsTopseller">
                     </sw-field>
