--- a/Resources/administration/src/module/sw-settings-country/page/sw-settings-country-detail/sw-settings-country-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-country/page/sw-settings-country-detail/sw-settings-country-detail.html.twig
@@ -79,7 +79,8 @@
                             {% endblock %}
 
                             {% block sw_settings_country_detail_content_field_active %}
-                                <sw-field type="boolean"
+                                <sw-field type="switch"
+                                          bordered
                                           :label="$tc('sw-settings-country.detail.labelActive')"
                                           v-model="country.active">
                                 </sw-field>
