--- a/Resources/administration/src/module/sw-settings-customer-group/page/sw-settings-customer-group-detail/sw-settings-customer-group-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-customer-group/page/sw-settings-customer-group-detail/sw-settings-customer-group-detail.html.twig
@@ -67,7 +67,8 @@
                             {% endblock %}
 
                             {% block sw_settings_customer_group_detail_content_card_display_gross %}
-                                <sw-field type="boolean"
+                                <sw-field type="switch"
+                                          bordered
                                           v-model="customerGroup.displayGross"
                                           class="sw-settings-customer-group-detail__display_gross"
                                           :label="$tc('sw-settings-customer-group.detail.fieldDisplayGrossLabel', customerGroup.displayGross)">
