--- a/Resources/administration/src/module/sw-settings-number-range/page/sw-settings-number-range-detail/sw-settings-number-range-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-number-range/page/sw-settings-number-range-detail/sw-settings-number-range-detail.html.twig
@@ -89,7 +89,8 @@
                         <sw-container columns="repeat(auto-fit, minmax(250px, 1fr)" gap="0px 30px">
                             {% block sw_settings_number_range_detail_content_field_default %}
                                 <div class="sw-settings-number-range-detail__field_default">
-                                    <sw-field type="boolean"
+                                    <sw-field type="switch"
+                                              bordered
                                               v-model="advanced"
                                               :label="$tc('sw-settings-number-range.detail.labelAdvanced')">
                                     </sw-field>
