--- a/Resources/administration/src/module/sw-settings-basic-information/page/sw-settings-basic-information/sw-settings-basic-information.html.twig
+++ b/Resources/administration/src/module/sw-settings-basic-information/page/sw-settings-basic-information/sw-settings-basic-information.html.twig
@@ -29,17 +29,22 @@
             </template>
         {% endblock %}
 
-        {% block sw_settings_basic_information_smart_bar_actions %}
-            <template slot="smart-bar-actions">
-                {% block sw_settings_basic_information_actions_save %}
-                <sw-button variant="primary"
-                           class="sw-settings-basic-information__save-action"
-                           @click="onSave">
-                    {{ $tc('sw-settings-basic-information.general.buttonSave') }}
-                </sw-button>
-                {% endblock %}
-            </template>
-        {% endblock %}
+            {% block sw_settings_basic_information_smart_bar_actions %}
+                <template slot="smart-bar-actions">
+                    {% block sw_settings_basic_information_actions_save %}
+                    <sw-button-process
+                            class="sw-settings-basic-information__save-action"
+                            :isLoading="isLoading"
+                            :processSuccess="isSaveSuccessful"
+                            :disabled="isLoading"
+                            variant="primary"
+                            @process-finish="saveFinish"
+                            @click="onSave">
+                        {{ $tc('sw-settings-basic-information.general.buttonSave') }}
+                    </sw-button-process>
+                    {% endblock %}
+                </template>
+            {% endblock %}
 
         {% block sw_settings_basic_information_content %}
             <template slot="content">
