--- a/Resources/administration/src/module/sw-settings-country/page/sw-settings-country-detail/sw-settings-country-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-country/page/sw-settings-country-detail/sw-settings-country-detail.html.twig
@@ -17,9 +17,16 @@
                 {% endblock %}
 
                 {% block sw_settings_country_detail_actions_save %}
-                    <sw-button variant="primary" class="sw-settings-country-detail__save-action" :disabled="country.isLoading" @click.prevent="onSave">
-                        {{ $tc('sw-settings-country.detail.buttonSave') }}
-                    </sw-button>
+                <sw-button-process
+                        class="sw-settings-country-detail__save-action"
+                        :isLoading="isLoading"
+                        :processSuccess="isSaveSuccessful"
+                        :disabled="country.isLoading"
+                        variant="primary"
+                        @process-finish="saveFinish"
+                        @click.prevent="onSave">
+                    {{ $tc('sw-settings-country.detail.buttonSave') }}
+                </sw-button-process>
                 {% endblock %}
             </template>
         {% endblock %}
