--- a/Resources/administration/src/module/sw-settings-language/page/sw-settings-language-detail/sw-settings-language-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-language/page/sw-settings-language-detail/sw-settings-language-detail.html.twig
@@ -17,9 +17,16 @@
                 {% endblock %}
 
                 {% block sw_settings_language_detail_actions_save %}
-                    <sw-button class="sw-settings-language-detail__save-action" variant="primary" :disabled="language.isLoading" @click.prevent="onSave">
-                        {{ $tc('sw-settings-language.detail.buttonSave') }}
-                    </sw-button>
+                <sw-button-process
+                        class="sw-settings-language-detail__save-action"
+                        :isLoading="isLoading"
+                        :processSuccess="isSaveSuccessful"
+                        :disabled="language.isLoading"
+                        variant="primary"
+                        @process-finish="saveFinish"
+                        @click.prevent="onSave">
+                    {{ $tc('sw-settings-language.detail.buttonSave') }}
+                </sw-button-process>
                 {% endblock %}
             </template>
         {% endblock %}
