NTR - Add process button for number range module

--- a/Resources/administration/src/module/sw-settings-number-range/page/sw-settings-number-range-detail/sw-settings-number-range-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-number-range/page/sw-settings-number-range-detail/sw-settings-number-range-detail.html.twig
@@ -23,9 +23,17 @@
                 {% endblock %}
 
                 {% block sw_settings_number_range_detail_actions_save %}
-                    <sw-button class="sw-settings-number-range-detail__save-action" variant="primary" :disabled="numberRange.isLoading" @click.prevent="onSave()">
+                    <sw-button-process
+                            class="sw-settings-number-range-detail__save-action"
+                            :isLoading="isLoading"
+                            :processSuccess="isSaveSuccessful"
+                            :disabled="numberRange.isLoading"
+                            variant="primary"
+                            @process-finish="saveFinish"
+                            @click.prevent="onSave">
                         {{ $tc('sw-settings-number-range.detail.buttonSave') }}
-                    </sw-button>
+                     </sw-button>
+                </sw-button-process>
                 {% endblock %}
             </template>
         {% endblock %}
